--- a/source/_patterns/01-atoms/typography/_text.scss
+++ b/source/_patterns/01-atoms/typography/_text.scss
@@ -73,7 +73,7 @@ a.usa-link,
 
   &:active,
   &:focus {
-    @include u-text("blue-cool-50v");
+    @include u-text("cyan-60v");
   }
 
   &:visited {
